minor alignment fix

--- a/ui/src/app/plant-maintenance/plant-maintenance.component.scss
+++ b/ui/src/app/plant-maintenance/plant-maintenance.component.scss
@@ -13,7 +13,4 @@ table, ul {
 .table-details {
 	background-color: transparent;
 }
-.detail-key {
-	text-align: right;
-}
 .material-icons.md-18 { font-size: 18px; }
